<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kalkulator"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/val1"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:hint="@string/masukkan_angka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/val2"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/masukkan_angka"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/button"
        android:text="@string/penambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengurangan"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perkalian"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pembagian"
        android:layout_margin="10dp"
        />


    <TextView
        android:id="@+id/hasil"
        android:textAlignment="center"
        android:inputType="number"
        android:layout_marginTop="25px"
        android:textSize="30sp"
        android:text="@string/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>